[gd_scene load_steps=12 format=3 uid="uid://deahyu1t2scq8"]

[ext_resource type="Script" path="res://ui/score/score.gd" id="1_igs40"]
[ext_resource type="Texture2D" uid="uid://bosh0q5ji222g" path="res://ui/ui.png" id="2_ij77s"]
[ext_resource type="FontFile" uid="uid://7k4fj8mgpdh3" path="res://ui/numbers/numbers.fnt" id="3_fmxnt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8nvhi"]
atlas = ExtResource("2_ij77s")
region = Rect2(3, 139, 52, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkasq"]
atlas = ExtResource("2_ij77s")
region = Rect2(60, 139, 52, 35)

[sub_resource type="Animation" id="Animation_4f7te"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -48)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HomeFlag/Texture:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(52, 35)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HomeFlag/Texture:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HomeFlag/Texture:pivot_offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AwayFlag/Texture:size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(52, 35)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("AwayFlag/Texture:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AwayFlag/Texture:pivot_offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_83xfc"]
resource_name = "hidden"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -48)]
}

[sub_resource type="Animation" id="Animation_yve7w"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -48)]
}

[sub_resource type="Animation" id="Animation_myf82"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -48), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_w0xs4"]
resource_name = "visible"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1h7cd"]
_data = {
"RESET": SubResource("Animation_4f7te"),
"hidden": SubResource("Animation_83xfc"),
"hide": SubResource("Animation_yve7w"),
"show": SubResource("Animation_myf82"),
"visible": SubResource("Animation_w0xs4")
}

[node name="Score" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_igs40")

[node name="Container" type="Control" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -48.0
offset_right = 320.0
offset_bottom = 132.0
grow_horizontal = 2

[node name="HomeFlag" type="CenterContainer" parent="Container"]
layout_mode = 0
offset_left = 57.0
offset_top = -4.0
offset_right = 109.0
offset_bottom = 48.0

[node name="Texture" type="TextureRect" parent="Container/HomeFlag"]
layout_mode = 2
texture = SubResource("AtlasTexture_8nvhi")

[node name="AwayFlag" type="CenterContainer" parent="Container"]
layout_mode = 0
offset_left = 202.0
offset_top = -4.0
offset_right = 254.0
offset_bottom = 48.0

[node name="Texture" type="TextureRect" parent="Container/AwayFlag"]
layout_mode = 2
texture = SubResource("AtlasTexture_nkasq")

[node name="ScoreText" type="Label" parent="Container"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_top = 9.0
offset_right = 33.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_fmxnt")
text = "0 - 0"
horizontal_alignment = 1

[node name="Animation" type="AnimationPlayer" parent="Container"]
libraries = {
"": SubResource("AnimationLibrary_1h7cd")
}
autoplay = "hidden"
